# wireguard-manager

./: .gitignore  Cargo.toml  LICENSE  README.md  example.config.yaml
.github/workflows/: docker.yml  rust.yml
docker/: Dockerfile  wireguard-manager
src/: config.rs  create-schema.rs  dns.rs  gen-client.rs  main.rs  schema.rs  schema.sql  web.rs  wireguard-manager.rs  wireguard.rs
static/: index.html
