[package]
name = "wireguard-manager"
version = "0.1.0"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2018"

[dependencies]
tokio-postgres = "~0.5.0-alpha.1"
tokio = { version = "=0.2.0-alpha.6", features = ["process"] }
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }
futures-util-preview = "~0.3.0-alpha.19"
failure = "0.1"
tempfile = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
regex = "1.3"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.7"
