[package]
name = "wireguard-manager"
version = "0.1.0"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "=0.2.0-alpha.6", features = ["process"] }
tokio-net = { version = "=0.2.0-alpha.6" }
tokio-postgres = "~0.5.0-alpha.1"
hyper = { version = "0.13.0-alpha.4", features = ["runtime", "unstable-stream"] }

futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }
futures-util-preview = "~0.3.0-alpha.19"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"

log = "0.4"
env_logger = "0.7"

regex = "1.3"
lazy_static = "1.4"
failure = "0.1"
tempfile = "3.1"

[[bin]]
name = "wireguard-manager"
path = "src/wireguard-manager.rs"

[[bin]]
name = "gen-client"
path = "src/gen-client.rs"
